<?xml version="1.0"?>
<package format="3">
  <name>glim_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for GLIM with fixed topic remaps for Livox</description>
  <maintainer email="noreply@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>glim_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
