<?xml version="1.0"?>
<package format="3">
  <name>livox_mid360_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for Livox MID360 on ROS 2</description>
  <maintainer email="noreply@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


